moved animation to stop expanding webpage
x-axis scroll bar not showing up anymore

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,12 +121,13 @@ body {
 }
 
 .bg-grad-anim {
+  overflow: hidden;
   position: absolute;
   z-index: -1;
   top: -400px;
-  left: 58%;
-  width: 350px;
-  height: 350px;
+  left: -15%;
+  width: 200px;
+  height: 400px;
   border-radius: 15rem;
   background: radial-gradient(77.73% 77.73% at 98.52% 96.25%,#f700ff 0,rgba(239, 76, 239, 0.29) 60.52%,rgba(91,216,216,0) 100%),radial-gradient(141.73% 105.23% at 50% -7.16%,#ff58e3 0,rgba(160,236,255,0) 60.73%,rgba(147,154,255,0) 100%),radial-gradient(112.27% 48.54% at 1.59% 50%,rgba(255, 73, 246, 0.5) 0,rgba(73,121,255,.09) 60.91%,rgba(216,237,255,0) 100%),linear-gradient(
 153.07deg,#f377de 16.37%,rgba(103,237,255,0) 83.82%);
@@ -134,10 +135,12 @@ body {
   filter: blur(49px) saturate(9);
   -webkit-animation: 8s linear .5s infinite fadeloop;
   animation: 8s linear .5s infinite fadeloop;
+  overflow: hidden;
   
 }
 
 .bg-grad-anim-2 {
+  overflow: hidden;
   position: absolute;
   z-index: -1;
   bottom: -400px;
@@ -152,6 +155,7 @@ body {
   -webkit-animation: 8s linear .5s infinite fadeloop2;
   animation: 8s linear .5s infinite fadeloop2;
   animation-delay: 12s;
+  overflow: hidden;
 }
 
 @keyframes fadeloop {
